[package]
name = "rads"
version = "0.1.0"
authors = ["Jason Priest <jpriest@mit.edu>"]

description = "Advanced and niche data structures"
repository = "https://github.com/JustAPerson/rads"
categories = ["algorithms", "data-structures"]
readme = "./README.md"
license = "MIT/Apache-2.0"

[dependencies]
rand = "0.3"